# base-project

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  DefaultHandlers.S  README.md  ResetHandler.S  Rng.S  Rng.h  SysTick.S  SysTick.h  Uart.S  Uart.h  Vectors.S  entry_c.c  entry_c.h  linker_script.lds  main.c  platform.resc.in  toolchain.cmake
drivers/: EventGeneratorUnit.c  EventGeneratorUnit.h  Uarte.h  Wdt.c  Wdt.h  WdtRegisters.h  mpu.c  mpu.h  nvic.h  random.c  random.h  register_access.c  register_access.h  timer.c  timer.h  uart.c  uart.h
renode/: nrf52840.repl.in  platform.resc.in
tests/: egu_test.c  egu_test.h  mpu_test.c  mpu_test.h  timer_test.c  timer_test.h  wdt_test.c  wdt_test.h
utils/: Strings.c  Strings.h
